docs: add docs for todo handler
