# internal/models/reponse.go
@@ -1,0 +1,9 @@
+package model
+
+type HTTPError struct {
+	Error string `json:"error"`
+}
+
+type BooleanResponse struct {
+	Data bool `json:"data"`
+}
